--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -2,14 +2,14 @@
   "name": "@nano-di/jest",
   "private": false,
   "access": "public",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "build/index.js",
   "license": "MIT",
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
-    "@nano-di/core": "1.0.0",
+    "@nano-di/core": "0.0.2",
     "@types/jest": "^29.5.0"
   },
   "devDependencies": {
@@ -18,5 +18,8 @@
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "typescript": "^5.0.2"
+  },
+  "peerDependencies": {
+    "jest": "^29.5.0"
   }
 }
