--- a/packages/sinon/package.json
+++ b/packages/sinon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nano-di/sinon",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "build/index.js",
   "private": false,
   "access": "public",
@@ -9,7 +9,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@nano-di/core": "1.0.0"
+    "@nano-di/core": "0.0.2"
   },
   "devDependencies": {
     "@types/sinon": "^10.0.13",
@@ -17,5 +17,8 @@
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "typescript": "^5.0.2"
+  },
+  "peerDependencies": {
+    "jest": "^13.0.0"
   }
 }
