--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,7 @@
   "main": "build/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "rm -rf ./build && tsc"
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
